--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "dependencies": {
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "sass": "^1.64.1",
     "typescript": "3.3.3"
   },
   "scripts": {
